# goldfish-piloted-navigation

./: README.md  README.txt
gpn_config/: CMakeLists.txt  package.xml
gpn_config/config/: gpn_ros_params.yaml
gpn_controllers/PID_controller/: CMakeLists.txt  package.xml
gpn_controllers/PID_controller/include/PID_controller/: pid_controller.hpp
gpn_controllers/gpn_pid_controller/: CMakeLists.txt  package.xml
gpn_controllers/gpn_pid_controller/config/: params.yaml
gpn_controllers/gpn_pid_controller/include/gpn_pid_controller/: gpn_pid_controller.hpp
gpn_controllers/gpn_pid_controller/launch/: gpn_pid_controller.launch.xml
gpn_controllers/gpn_pid_controller/src/: gpn_pid_controller.cpp  gpn_pid_controller_node.cpp
gpn_controllers/pid_controller/: CMakeLists.txt  package.xml
gpn_controllers/pid_controller/config/: params.yaml
gpn_controllers/pid_controller/src/: pid_controller.cpp  pid_controller_node.cpp
gpn_coordinator/: CMakeLists.txt  package.xml
gpn_coordinator/config/: params.yaml
gpn_coordinator/include/gpn_coordinator/: gpn_coordinator.hpp
gpn_coordinator/launch/: gpn_coordinator.launch  gpn_coordinator.launch.xml
gpn_coordinator/src/: gpn_coordinator.cpp  gpn_coordinator_node.cpp
gpn_msgs/: CMakeLists.txt  package.xml
gpn_msgs/msg/: FishCmd.msg  GpnOdom.msg  GpnState.msg
gpn_msgs/srv/: ComputeControls.srv
